[project]
name = "modules"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = []

[tool.uv.workspace]
members = [
    "cache",
    "std",
    "core/*",
    "sdk/*",
    "ext/*",
    "services/gateway",
    "seminar/asgi",
    "seminar/ioc",
    "seminar/explicit",
    "seminar/solid",
    "seminar/last",
]
