[project]
name = "cache"
version = "0.1.0"
description = "sunbot.std — platform foundation."
readme = "README.md"
authors = [{ email = "hoang.minh.quan@sun-asterisk.com" }]
requires-python = ">=3.14"
dependencies = ["std>=1.0"]

[project.optional-dependencies]
redis = ["redis[hiredis]>=8.0.0"]

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["sunbot.core.cache", "sunbot.sdk.cache"]

[tool.uv.sources]
std = { workspace = true }
