[project]
name = "std"
version = "2.0"
description = "sunbot.std — platform foundation."
readme = "README.md"
authors = [{ email = "hoang.minh.quan@sun-asterisk.com" }]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "sunbot.std"
