[project]
name = "gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ email = "hoang.minh.quan@sun-asterisk.com" }]
requires-python = ">=3.14"
dependencies = [
    "cache",
    "granian>=2.7.5",
    "litestar>=2.23.0",
    "uvicorn>=0.49.0",
]

[project.scripts]
gateway = "gateway:main"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
cache = { workspace = true }
